external-crates/move/crates/move-compiler/tests/move_check/typing/vector_no_type_inferred.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E04010]: cannot infer type
  ┌─ tests/move_check/typing/vector_no_type_inferred.move:4:9
  │
4 │         vector[];
  │         ^^^^^^^^ Could not infer this type. Try adding an annotation
